Alignment fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,14 +101,8 @@ body {
     color: #dcd0ff;
     display: inline-block;
     margin-right: 6px;
-}
-
-.image-slider-autoplay-toggle {
-    padding: 0 6px;
-}
-
-.image-slider-nav__button {
-    padding: 6px 6px 0;
+    line-height: 1;
+    padding: 6px;
 }
 
 .image-slider-nav__button.tns-nav-active {
